fix sponsor logo section alignment

--- a/css/style.css
+++ b/css/style.css
@@ -595,7 +595,7 @@ a {
     }
     .pre_sponsors .wrapper {
         float: left;
-        width: 60%;
+        width: 69.2%;
         margin-left: -5%;
         margin-top: 6%;
     }
